@@ -42,6 +42,7 @@ Other features
  * Add ability to filter image index by a tag (Benedikt Willi)
  * Add formal support for nested InlinePanels (Matt Westcott)
  * Added cache control headers when serving documents (Johannes Vogel)
+ * Use ``sensitive_post_parameters`` on password reset form (Dan Braghis)
 
 
 Bug fixes
